# CppMeeting

./: .gitignore  CMakeLists.txt  CPP Meeting.pptx  README.md
1. Extension classes/: CMakeLists.txt
1. Extension classes/src/: airco.cpp  airco_demo.cpp  airco_demo.py  airco_module.cpp  controller.cpp  cooler_demo.cpp
1. Light/: CMakeLists.txt  demo.py  light.cpp  light.h  light_module.cpp  main.cpp
2. Subclassing Python Extensions/src/: airco.cpp  airco.h  airco_demo.py  airco_module.cpp  controller.cpp  controller.h  controller_demo.cpp  cooler.h
3. Embedded Python/: CMakeLists.txt
3. Embedded Python/src/: airco.cpp  airco.h  airco_demo.cpp  airco_demo.py  airco_module.cpp  console_demo.cpp  controller.h  cooler.cpp  demo.cpp  embedded_demo.cpp  pycontroller.py  room.cpp  room.h  room_demo.cpp  temperature.cpp  temperature.h  thermostat.cpp  thermostat.h
src/: airco.cpp  airco.h  airco_demo.cpp  airco_demo.py  airco_module.cpp  controller.cpp  controller.h  controller_demo.cpp  room.cpp  room.h
